--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -11,7 +11,9 @@ RUN apt-get install -y \
     wget \
     git \
     autoconf libtool pkg-config \
-    protobuf-compiler
+    protobuf-compiler \
+    python3 \
+    pip
 
 # Create a directory in the root of the container
 RUN mkdir -p /root/db-manager
