Updated Select, Makefile, and debug
Debug now works correctly on all methods, Makefile is updated to call other makefiles. Select now slightly works better by using serial messages instead of a string

--- a/db-manager/Makefile
+++ b/db-manager/Makefile
@@ -1,10 +1,22 @@
-.PHONY: all clean
+# Sets the directory the clients are in
+CLIENTS_DIR := Clients
 
-# Add the export command to update PATH
+# Find all subdirectories in the directory
+SUBDIRS := $(wildcard $(CLIENTS_DIR)/*)
+
+# Default targets for 'make'
+all: $(SUBDIRS) education_proto email_proto generic_proto weather_proto
+
+# Iterate over each directory and call its Makefile if it exists
+$(SUBDIRS):
+	@if [ -e $@/Makefile ]; then \
+        $(MAKE) -C $@; \
+    fi
+
+# Add the export command for PATH when using go
 export PATH := $(PATH):$(shell go env GOPATH)/bin
 
-all: education_proto email_proto generic_proto weather_proto
-
+# Main targets required for server
 education_proto:
 	protoc --go_out=common --go-grpc_out=common proto/education.proto
 
@@ -17,5 +29,8 @@ weather_proto:
 generic_proto:
 	protoc --go_out=common --go-grpc_out=common proto/generic.proto
 
+.PHONY: all clean $(SUBDIRS) education_proto email_proto generic_proto weather_proto
+
 clean:
 	rm -rf common/*
+	$(foreach dir, $(SUBDIRS), $(MAKE) -C $(dir) clean;)
