--- a/db-manager/.vscode/settings.json
+++ b/db-manager/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.analysis.extraPaths": [
-        "./common"
+        "./common",
+        "./Clients/weatherclient/common",
+        "./Clients/csvclients/common"
     ]
 }
