Adding image client. Includes Pillow import in Dockerfile

--- a/db-manager/.vscode/settings.json
+++ b/db-manager/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.analysis.extraPaths": [
         "./common",
         "./Clients/weatherclient/common",
-        "./Clients/csvclients/common"
+        "./Clients/csvclients/common",
+        "./Clients/imageclient/common"
     ]
 }
