Added CONFIG and updated proto
Updated proto to include a returned status

--- a/db-manager/Makefile
+++ b/db-manager/Makefile
@@ -18,14 +18,13 @@ export PATH := $(PATH):$(shell go env GOPATH)/bin
 
 # Main targets required for server (compiles everything in proto)
 compile_protos:
-	@protoc --go_out=common --go-grpc_out=common proto/*.proto
+	@protoc --go_out=internal/common --go-grpc_out=internal/common proto/*.proto
 
 .PHONY: all clean $(SUBDIRS) education_proto email_proto generic_proto weather_proto image_proto
 
 # Default run for the server
 run:
 	go run Server/main.go
-
 
 # Clear compiled Protos
 clean:
