Cleaned up server and added logging
Logging isn't really any special just uses the prior debug lines he had, but keeps it cleaner

--- a/db-manager/Makefile
+++ b/db-manager/Makefile
@@ -26,6 +26,10 @@ compile_protos:
 run:
 	go run Server/main.go
 
+# Run the tests for the server
+test:
+	go test Server/test.go
+
 # Clear compiled Protos
 clean:
 	rm -rf internal/common/*
